# ag_multimodal_reasoning

./: .gitignore  README.md  pyproject.toml  sanity_check.ipynb  slurm_job.sh
configs/: config.yaml
configs/data/: rgb_fields.yaml  rgb_noise_reduced.yaml  rgb_single.yaml  spectral_fields.yaml  spectral_single.yaml  temporal.yaml  temporal_denoised.yaml  temporal_fields.yaml
configs/experiment/: step1_rgb_baseline.yaml  step2_noise_reduced.yaml  step3_spectral.yaml  step4_temporal.yaml
configs/field/: classifier_mlp.yaml  classifier_xgboost.yaml  features.yaml
configs/model/: deeplabv3plus_efficientnet_b3.yaml  deeplabv3plus_resnet34.yaml  deeplabv3plus_resnet50.yaml  deeplabv3plus_swin_tiny.yaml  unet_resnet34.yaml  unet_resnet50.yaml  unet_scratch.yaml  unet_swin_tiny.yaml
configs/paths/: hpc.yaml  local.yaml
configs/slurm/: default.yaml
configs/training/: default.yaml  long.yaml
notebooks/: data_analysis.ipynb  data_validation.ipynb  field_analysis.ipynb
scripts/: compare_approaches.py  create_field_masks.py  extract_field_features.py  run_shap_analysis.py  train.py  train_field_classifier.py
src/irrigation/data/: bands.py  class_weights.py  datamodule.py  dataset.py  field_channels.py  noise.py  normalization.py  transforms.py
src/irrigation/evaluation/: metrics.py  visualize.py
src/irrigation/field/: __init__.py  classifiers.py  feature_extraction.py  field_datamodule.py  field_dataset.py  instance_masks.py  (+1 more)
tests/: conftest.py  test_dataset.py  test_field_channels.py  test_metrics.py  test_model_forward.py  test_noise.py  test_transforms.py
(+4 files in other folders)
