[project]
name = "irrigation-reasoning"
version = "0.1.0"
description = "Multi-level reasoning framework for irrigation type classification from Sentinel-2 data"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "pytorch-lightning>=2.2",
    "torchmetrics>=1.3",
    "segmentation-models-pytorch>=0.3.3",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.16",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "fiona>=1.9",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "albumentations>=1.3",
    "rich>=13.0",
    "xgboost>=2.0",
    "shap>=0.44",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
